--- a/index.html
+++ b/index.html
@@ -121,11 +121,130 @@
     <!-- catagories area start
     ============================================= -->
     <main>
-        <section class="catagories-area">
-            
+        <section class="catagories-area my-5 section-padding">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-lg-3 g-3 g-lg-5">
+                    <div class="col">
+                        <div class="py-4 px-5 bg-light d-flex align-items-center justify-content-between catagories-content-items"
+                            id="watch-background">
+                            <h3>watch</h3>
+                            <img style="max-width: 8rem;" src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="py-4 px-5 bg-light d-flex align-items-center justify-content-between catagories-content-items"
+                            id="bag-background">
+                            <h3>bag</h3>
+                            <img style="max-width: 8rem;" src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="py-4 px-5 bg-light d-flex align-items-center justify-content-between catagories-content-items"
+                            id="shoes-background">
+                            <h3>shoes</h3>
+                            <img style="max-width: 8rem;" src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </section>
+        <!-- catagories area end -->
+        <!-- display area start
+    ============================================= -->
+        <section class="display-area section-padding">
+            <div class="container">
+                <div class="shoes-area">
+                    <div class="section-title">
+                        <h2>shoes</h2>
+                        <a href="#">see all</a>
+                    </div>
+                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3 g-lg-5">
+                        <div class="col">
+                            <div class="p-3 shoes-items">
+                                <img src="images/shoes/shoe-1.png" alt="">
+                                <h3>Reebok Dart Men’s Shoes</h3>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                                <span>$1289</span>
+                                <button class="section-btn">buy now &nbsp; <i class="fas fa-arrow-right"></i></button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3 shoes-items">
+                                <img src="images/shoes/shoe-2.png" alt="">
+                                <h3>Reebok Dart Men’s Shoes</h3>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                                <span>$1289</span>
+                                <button class="section-btn">buy now &nbsp; <i class="fas fa-arrow-right"></i></button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3 shoes-items">
+                                <img src="images/shoes/shoe-3.png" alt="">
+                                <h3>Reebok Dart Men’s Shoes</h3>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                                <span>$1289</span>
+                                <button class="section-btn">buy now &nbsp; <i class="fas fa-arrow-right"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="backpack-area">
+                    <div class="section-title">
+                        <h2>Backpack</h2>
+                        <a href="#">see all</a>
+                    </div>
+                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3 g-lg-5">
+                        <div class="col">
+                            <div class="p-3 backpack-items">
+                                <img src="images/bags/bag-1.png" alt="">
+                                <h3>Ison Backpack</h3>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                                <span>$1289</span>
+                                <button class="section-btn">buy now &nbsp; <i class="fas fa-arrow-right"></i></button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3 backpack-items">
+                                <img src="images/bags/bag-2.png" alt="">
+                                <h3>Biaowang Backpack</h3>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                                <span>$779</span>
+                                <button class="section-btn">buy now &nbsp; <i class="fas fa-arrow-right"></i></button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3 backpack-items">
+                                <img src="images/bags/bag-3.png" alt="">
+                                <h3>Dxyizu WS54 Smart</h3>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                                <span>$699</span>
+                                <button class="section-btn">buy now &nbsp; <i class="fas fa-arrow-right"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- display area end -->
+        <!-- subscribe  area end -->
+        <!-- subscribe area start
+       ============================================= -->
+        <section class="subscribe-area section-padding">
+            <div class="container d-flex justify-content-between align-items-center flex-column all-items">
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales specials and more</p>
+                <form action="" class="d-flex">
+                    <input type="text" placeholder="enter your email">
+                    <input type="submit" value="send">
+                </form>
+            </div>
+        </section>
+
+
+        <!-- subscribe  area end -->
     </main>
-    <!-- catagories area end -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
